--- a/disaster_relief/template/team.html
+++ b/disaster_relief/template/team.html
@@ -60,7 +60,7 @@
                         <a href="price.html" class="dropdown-item">Pricing Plan</a>
                         <a href="team.html" class="dropdown-item active">Our Barber</a>
                         <a href="open.html" class="dropdown-item">Working Hours</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="logistics.html" class="dropdown-item">Testimonial</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
