--- a/disaster_relief/template/index.html
+++ b/disaster_relief/template/index.html
@@ -53,15 +53,14 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about" class="nav-item nav-link">About</a>
-                <a href="logistics" class="nav-item nav-link">Logistics</a>
+                <a href="relief_centers" class="nav-item nav-link">Relief Centers</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
-                        <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                        <a href="notifications.html" class="dropdown-item">Our Barber</a>
-                        <a href="admin_dashboard.html" class="dropdown-item">Working Hours</a>
-                        <a href="logistics.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="notifications" class="dropdown-item">Notifications</a>
+                        <a href="admin_dashboard.html" class="dropdown-item">Trash Page</a>
+                        <a href="logistics.html" class="dropdown-item">Logistics</a>
+                        <a href="404.html" class="dropdown-item">Trash Page</a>
                     </div>
                 </div>
                 <a href="report" class="nav-item nav-link">Report</a>
