--- a/disaster_relief/template/about.html
+++ b/disaster_relief/template/about.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block bg-secondary text-primary py-1 px-4">About Us</p>
-                    <h1 class="text-uppercase mb-4">More Than Just A Haircut. Learn More About Us!</h1>
+                    <h1 class="text-uppercase mb-4">Learn More About Us!</h1>
                     <p>The Disaster Relief Fund provides immediate financial aid and resources to communities impacted by natural disasters. It offers support in the form of emergency relief, such as food, shelter, and medical supplies, while also assisting with long-term recovery.</p>
                     <p class="mb-4">The Disaster Relief Fund aids long-term recovery by helping rebuild homes, infrastructure, and livelihoods, working with local organizations, agencies, and volunteers to ensure efficient resource distribution.</p>
                 </div>
