--- a/disaster_relief/template/index.html
+++ b/disaster_relief/template/index.html
@@ -51,16 +51,16 @@ cd<!DOCTYPE html>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="index" class="nav-item nav-link active">Index</a>
                 <a href="about" class="nav-item nav-link">About</a>
                 <a href="relief_centers" class="nav-item nav-link">Relief Centers</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
                         <a href="notifications" class="dropdown-item">Notifications</a>
-                        <a href="admin_dashboard.html" class="dropdown-item">Trash Page</a>
-                        <a href="logistics.html" class="dropdown-item">Logistics</a>
-                        <a href="404.html" class="dropdown-item">Trash Page</a>
+                        <a href="admin_dashboard" class="dropdown-item">Trash Page</a>
+                        <a href="logistics" class="dropdown-item">Logistics</a>
+                        <a href="pagenotfound" class="dropdown-item">Error Page</a>
                     </div>
                 </div>
                 <a href="report" class="nav-item nav-link">Report</a>
