--- a/disaster_relief/template/report.html
+++ b/disaster_relief/template/report.html
@@ -53,7 +53,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index" class="nav-item nav-link">Home</a>
+                <a href="index" class="nav-item nav-link">Index</a>
                 <a href="about" class="nav-item nav-link">About</a>
                 <a href="relief_centers" class="nav-item nav-link">Relief Centers</a>
                 <div class="nav-item dropdown">
