--- a/disaster_relief/template/report.html
+++ b/disaster_relief/template/report.html
@@ -61,7 +61,7 @@
                     <div class="dropdown-menu m-0">
                         <a href="notifications" class="dropdown-item">Notifications</a>
                         <a href="admin_dashboard" class="dropdown-item">Trash Page</a>
-                        <a href="logistics" class="dropdown-item">Testimonial</a>
+                        <a href="logistics" class="dropdown-item">Logistics</a>
                         <a href="pagenotfound" class="dropdown-item">Error Page</a>
                     </div>
                 </div>
