--- a/disaster_relief/template/index.html
+++ b/disaster_relief/template/index.html
@@ -213,7 +213,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="news-item bg-secondary p-4">
                         <h3 class="text-uppercase mb-3">Fundraising Success</h3>
-                        <p>Our recent fundraising campaign has successfully raised over $1 million for disaster relief.</p>
+                        <p>Our recent fundraising campaign has successfully raised over $1 million for disaster relief. Thanks to our amazing supporters.</p>
                         <a href="#" class="text-primary">Read More</a>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                         <div class="btn-square bg-dark flex-shrink-0 me-3">
                             <span class="fa fa-map-marker-alt text-primary"></span>
                         </div>
-                        <span>VARIKOLI, PUTHENCRUZ, KERALA</span>
+                        <span>Varikoli, Puthencruz, Kerala</span>
                     </div>
                     <div class="d-flex align-items-center mb-2">
                         <div class="btn-square bg-dark flex-shrink-0 me-3">
@@ -244,7 +244,7 @@
                         <div class="btn-square bg-dark flex-shrink-0 me-3">
                             <span class="fa fa-envelope-open text-primary"></span>
                         </div>
-                        <span>info@example.com</span>
+                        <span>mrpata@gmail.com</span>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -274,7 +274,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Reliefhub</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         Designed By <a class="border-bottom" href="https://github.com/CodedRichy">Rishi Praseeth</a>
