--- a/disaster_relief/template/index.html
+++ b/disaster_relief/template/index.html
@@ -89,7 +89,7 @@
                         <div class="mx-sm-5 px-5" style="max-width: 900px;">
                             <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">Supporting Communities in Need</h1>
                             <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-map-marker-alt text-primary me-3"></i>VARIKOLI, PUTHENCRUZ, KERALA</h4>
-                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</h4>
+                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-phone-alt text-primary me-3"></i>+91 9746209497</h4>
                         </div>
                     </div>
                 </div>
