--- a/disaster_relief/template/index.html
+++ b/disaster_relief/template/index.html
@@ -200,21 +200,21 @@
                     <div class="news-item bg-secondary p-4">
                         <h3 class="text-uppercase mb-3">New Relief Camp Opened</h3>
                         <p>We have opened a new relief camp in the affected region to provide immediate assistance to those in need.</p>
-                        <a href="#" class="text-primary">Read More</a>
+                        <a href="#" class="text-primary"></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="news-item bg-secondary p-4">
                         <h3 class="text-uppercase mb-3">Volunteers Needed</h3>
                         <p>We are looking for volunteers to help with our ongoing relief efforts. Join us in making a difference.</p>
-                        <a href="#" class="text-primary">Read More</a>
+                        <a href="#" class="text-primary"></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="news-item bg-secondary p-4">
                         <h3 class="text-uppercase mb-3">Fundraising Success</h3>
                         <p>Our recent fundraising campaign has successfully raised over $1 million for disaster relief. Thanks to our amazing supporters.</p>
-                        <a href="#" class="text-primary">Read More</a>
+                        <a href="#" class="text-primary"></a>
                     </div>
                 </div>
             </div>
