--- a/disaster_relief/template/report.html
+++ b/disaster_relief/template/report.html
@@ -78,7 +78,7 @@
             <h1 class="display-3 text-white text-uppercase mb-3 animated slideInDown">Report</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Index</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="index">Index</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Contact</li>
                 </ol>
